frontend/src/app.css
@import 'tailwindcss';
@import 'tw-animate-css';

html {
	background: var(--color-login-bg);
}

/* default theme (light)*/
@theme {
	--color-primary: #ef7722;
	--color-secondary: #fdbea9;
	--color-outline: var(--color-primary);
	--color-text: var(--color-black);
	--color-text-hover: var(--color-white);
	--color-input: var(--color-white);

	--color-login-bg: var(--color-gray-50);
	--color-chat-bg: var(--color-gray-50);
	--color-sidebar-bg: var(--color-white);
	--color-chat-input-bg: var(--color-white);
	--color-user-bg: var(--color-secondary);
	--color-popup-bg: var(--color-white);
	--color-component-bg: var(--color-white);
	--color-pattern-bg: #e5e7eb;
}

[data-theme='dark'],
[data-theme='dark-pattern'] {
	--color-secondary: #e6521f;
	--color-secondary: #fb9e3a;
	--color-outline: #ccc;
	--color-text: var(--color-white);
	--color-text-hover: var(--color-white);
	--color-input: var(--color-popup-bg);

	--color-login-bg: #141211;
	--color-chat-bg: var(--color-login-bg);
	--color-sidebar-bg: #1d1b1a;
	--color-chat-input-bg: var(--color-sidebar-bg);
	--color-user-bg: var(--color-sidebar-bg);
	--color-popup-bg: #272422;
	--color-component-bg: var(--color-sidebar-bg);
	--color-pattern-bg: #2a2724;
}

[data-theme='blue'] {
	--color-primary: #1378d6;
	--color-secondary: #12395c;
	--color-outline: #ccc;
	--color-text: var(--color-white);
	--color-text-hover: #0d1117;
	--color-input: var(--color-slate-700);

	--color-login-bg: #0d1117;
	--color-chat-bg: #0d1117;
	--color-sidebar-bg: var(--color-slate-700);
	--color-chat-input-bg: var(--color-slate-700);
	--color-user-bg: var(--color-slate-700);
	--color-popup-bg: var(--color-slate-800);
	--color-component-bg: var(--color-slate-700);

	--color-background: #0d2840;

	--color-light: #12395c;
	--color-dark: white;
	--color-pattern-bg: #0f3051;
}

.bg-chat {
	background-color: var(--color-chat-bg);
	position: relative;
	isolation: isolate;
}

[data-theme='light-pattern'] .bg-chat::before,
[data-theme='dark-pattern'] .bg-chat::before {
	content: '';
	position: absolute;
	inset: 0;
	z-index: -1;
	pointer-events: none;

	background-color: var(--color-pattern-bg);

	-webkit-mask-image: url('/chat-bg.webp');
	mask-image: url('/chat-bg.webp');

	-webkit-mask-repeat: repeat;
	mask-repeat: repeat;

	-webkit-mask-size: 256px 256px;
	mask-size: 256px 256px;
}

.nobar {
	-ms-overflow-style: none;
	/* Internet Explorer 10+ */
	scrollbar-width: none;
	/* Firefox, Safari 18.2+, Chromium 121+ */
}

.nobar::-webkit-scrollbar {
	display: none;
	/* Older Safari and Chromium */
}

.editor:focus-visible {
	outline: none;
}

.editor::-webkit-scrollbar {
	display: none;
}

@layer base {
	/* disable chrome cancel button */
	input[type='search']::-webkit-search-cancel-button {
		display: none;
	}
}

.katex {
	font-weight: bold !important;
}

.katex .mord,
.katex .mop,
.katex .mrel {
	font-weight: 700 !important;
}

@layer utilities {
	.h-screen {
		height: 100vh;
	}

	@supports (height: 100svh) {
		.h-screen {
			height: 100svh;
		}
	}
}

